# qr-mcp-server

./: CLAUDE.md  README.md  pyproject.toml  server.py
